# pomdoro-timer

./: .eslintrc.js  .gitignore  CNAME  README.md  index.html  manifest.json  package-lock.json  package.json  precache-manifest.06ba59a038c828df15bbc051f13321e8.js  precache-manifest.61b856f85a4e5b8d2c205fbe7b790edc.js  service-worker.js  vite.config.js  vue.config.js
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  IMPROVE_SUGGESTIONS.md
css/: app.6b913b41.css  chunk-vendors.a003c982.css
js/: app.49606dea.js  app.49606dea.js.map  app.7a49df09.js  app.7a49df09.js.map  app.e99f9697.js  app.e99f9697.js.map  app.f40ad8f2.js  app.f40ad8f2.js.map  chunk-vendors.497b7518.js  chunk-vendors.497b7518.js.map  chunk-vendors.a377d7b0.js  chunk-vendors.a377d7b0.js.map  chunk-vendors.bb472a26.js  chunk-vendors.bb472a26.js.map
public/: index.html
src/: App.vue  background.js  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: Done.vue  Information.vue  Play.vue  Reset.vue  StopWatch.vue  Timer.vue  TimerSettings.vue
src/components/settings/: General.vue  Timer.vue
src/plugins/: vuetify.js
