[package]
name = "pomdoro-timer"
version = "0.1.0"
edition = "2021"
description = "Pomodoro timer desktop app built with Vue and Tauri"
authors = ["pomdoro-timer contributors"]
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "notification-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
